# TeluSinger

./: .gitignore  README.md  main.py  pyproject.toml  scraping_progress.json
cleaneddata/: sirivennela_cleaned_data.csv
rawdata/: extracted_data.csv  pending_songsv1.csv  pendingv2.csv  sirivennela_songs.csv  spb_rvc_training_dataset.csv
src/data_cleaning/: lyrics_cleaning.ipynb
src/datasets/: Check_for_remaining.ipynb  Check_for_remainingV2.ipynb  Explore_scarapped_data.ipynb  Explorekaggle_dataset.ipynb  bsp_songs.py
src/scrape/: lyrics_extraction.py  lyrics_extractionV2.py  selenium_scrapper.py  spb_songs.py  telugu_lyrics_scraper.py
src/utils/database/: lance_db.py
