[project]
name = "telusinger"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "duckduckgo-search>=8.1.1",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.1",
    "kaggle>=1.8.3",
    "lancedb>=0.26.0",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "selenium>=4.39.0",
    "undetected-chromedriver>=3.5.5",
    "unzip>=1.0.0",
    "webdriver-manager>=4.0.2",
    "yt-dlp>=2025.12.8",
]
